--- a/_config.yml
+++ b/_config.yml
@@ -158,19 +158,11 @@ prose:
   rooturl: '_posts'
   siteurl: 'http://simpleyyt.github.io/'
   relativeLinks: 'http://simpleyyt.github.io/links.jsonp'
-  ignore:
-    - index.md
-    - _config.yml
-    - /_layouts
-    - /_includes
-    - /archives
-    - /tags
-    - /categories
-    - /search
   metadata:
     _posts:
       - name: "layout"
         field:
+          element: "text"
           label: "Layout"
           placeholder: "layout"
           value: "post"
