--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ author:
   weibo: 1836017133      ## e.g. wuchong1014 or 2176287895 for http://weibo.com/2176287895
   weibo_verifier: 8266a57e  ## e.g. b3593ceb Your weibo-show widget verifier ,if you use weibo-show it is needed.
   tsina: 1836017133      ## e.g. 2176287895  Your weibo ID,It will be used in share button.
-  douban:     ## e.g. wuchong1014 or your id for https://www.douban.com/people/wuchong1014
+  douban: 62234732     ## e.g. wuchong1014 or your id for https://www.douban.com/people/wuchong1014
   zhihu: yaoyit      ## e.g. jark  for http://www.zhihu.com/people/jark
   email: simpleyyt@gmail.com      ## e.g. imjark@gmail.com
   twitter:    ## e.g. jarkwu for https://twitter.com/jarkwu
