--- a/_config.yml
+++ b/_config.yml
@@ -46,6 +46,7 @@ widgets:
 - tag
 - links
 - weibo
+- douban
 - rss
 ## provide seven widgets:category,tag,rss,archive,tagcloud,links,weibo,douban
 
