add separator and fix post url

--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,9 @@ defaults:
       type: "posts"
     values:
       layout: "post"
+
+#### Separator
+excerpt_separator: <!--more-->
       
 #### Pagination
 paginate: 10
