--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ index:
   expand: true           ## default is unexpanding,so you can only see the short description of each post.
   excerpt_link: Read More
 
-close_aside: true  #close sidebar in post page if true
+close_aside: false  #close sidebar in post page if true
 mathjax: false     #enable mathjax if true
 share_to: true #enable share-to buttons if true
 
