--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ keywords: "Jekyll, NexT, simpleyyt, yitao"
 rss:
 
 # Specify the date when the site was setup
-since: 2015
+since: 2019
 
 # icon between year and author @Footer
 authoricon: heart
@@ -142,8 +142,6 @@ menu_icons:
   archives: archive
   sitemap: sitemap
   commonweal: heartbeat
-
-
 
 
 # ---------------------------------------------------------------
@@ -214,8 +212,8 @@ font:
 # Key is the link label showing to end users.
 # Value is the target link (E.g. GitHub: https://github.com/iissnan)
 social:
-  GitHub: https://github.com/simpleyyt
-  知乎: http://www.zhihu.com/people/yaoyit
+  GitHub: https://github.com/justdojava
+  知乎: http://www.zhihu.com/people/ityouknow
 
 
 # Social Links Icons
@@ -234,7 +232,7 @@ social_icons:
 
 # Sidebar Avatar
 # in directory: /assets/images/avatar.gif
-avatar: /assets/images/author.jpeg
+avatar: /assets/images/wechat-qcode.jpg
 
 
 # Table Of Contents in the Sidebar
@@ -282,11 +280,11 @@ sidebar:
 
 
 # Blog rolls
-#links_title: Links
+links_title: Links
 #links_layout: block
 #links_layout: inline
-#links:
-  #Title: http://example.com/
+links:
+  Title: http://ityouknow.com/
 
 
 # ---------------------------------------------------------------
@@ -323,10 +321,10 @@ post_wordcount:
   separated_meta: true
 
 # Wechat Subscriber
-#wechat_subscriber:
-  #enabled: true
-  #qcode: /path/to/your/wechatqcode ex. /uploads/wechat-qcode.jpg
-  #description: ex. subscribe to my blog by scanning my public wechat account
+wechat_subscriber:
+  enabled: true
+  qcode: /assets/images/wechat-qcode.jpg
+  description: 欢迎订阅 Java 极客技术，这里分享关于 Java 的一切。
 
 # Declare license on posts
 post_copyright:
