--- a/_config.yml
+++ b/_config.yml
@@ -303,8 +303,8 @@ excerpt_description: true
 # Automatically Excerpt. Not recommend.
 # Please use <!-- more --> in the post to control excerpt accurately.
 auto_excerpt:
-  enable: false
-  length: 150
+  enable: true
+  length: 160
 
 # Post meta display settings
 post_meta:
