--- a/_config.yml
+++ b/_config.yml
@@ -436,11 +436,11 @@ changyan:
 # Support for gitalk comments system.
 gitalk:
   enable: true
-  clientID: # 54730ddf7b9420460c03
-  clientSecret: # c05684701b25ff1c19ea0c01ce4d80c125e0707d
-  repo: # colingpt.github.io
-  owner: # colingpt
-  admin: # colingpt
+  clientID:  a8a9e806ae8898126795
+  clientSecret:  f64f78aac63236a7a9cd25a16de2c3d91613914a
+  repo: blog-comments
+  owner: justdojava
+  admin: justdojava
 
 # Baidu Share
 # Available value:
