--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # Site
 title:  Just Do Java
 subtitle: Java 's Blog
-description: 一群热爱 Java 技术的技术人
+description: 一群热爱 Java 的技术人
 author: Java Geek Tech
 # Support language: de, en, fr-FR, id, ja, ko, pt-BR, pt, ru, zh-Hans, zh-hk, zh-tw
 language: zh-Hans
