--- a/_config.yml
+++ b/_config.yml
@@ -119,12 +119,12 @@ index_with_subtitle: false
 menu:
   home: /
   categories: /categories/
-  about: /about/
-  archives: /archives/
   tags: /tags/
+  archives: /archives/
+  about: /about/
   #sitemap: /sitemap.xml
   #commonweal: /404.html
-
+  commonweal: /archives/
 
 # Enable/Disable menu icons.
 # Icon Mapping:
