--- a/_config.yml
+++ b/_config.yml
@@ -303,7 +303,7 @@ excerpt_description: true
 # Automatically Excerpt. Not recommend.
 # Please use <!-- more --> in the post to control excerpt accurately.
 auto_excerpt:
-  enable: true
+  enable: false
   length: 16
 
 # Post meta display settings
