--- a/_config.yml
+++ b/_config.yml
@@ -438,7 +438,7 @@ gitalk:
   clientID: a8a9e806ae8898126795
   clientSecret: f64f78aac63236a7a9cd25a16de2c3d91613914a
   repo: blog-comments
-  owner: justdojava
+  owner: ityouknow
   admin: ityouknow
 
 # Baidu Share
