--- a/_config.yml
+++ b/_config.yml
@@ -379,8 +379,8 @@ baidu_analytics: 70b7e141dfc0ea2b204682f94ab2e01a
 
 # Disqus
 disqus:
-  enable: true
-  shortname: simpleyyt
+  enable: false
+  shortname: ityouknow
   count: true
   # hide comments (visitors need to click to load the comments)
   # count need to be false when hide is true
