--- a/_config.yml
+++ b/_config.yml
@@ -438,8 +438,8 @@ gitalk:
   clientID: a8a9e806ae8898126795
   clientSecret: f64f78aac63236a7a9cd25a16de2c3d91613914a
   repo: blog-comments
-  owner: ityouknow
-  admin: ityouknow
+  owner: justdojava
+  admin: justdojava
 
 # Baidu Share
 # Available value:
