--- a/_config.yml
+++ b/_config.yml
@@ -284,7 +284,7 @@ links_title: Links
 #links_layout: inline
 links:
   纯洁的微笑: http://ityouknow.com
-  沉默王二: https://blog.csdn.net/qing_gee
+  沉默王二: http://www.qingmiaokeji.cn
   子悠: https://zxsilence.cn
 
 
