--- a/_config.yml
+++ b/_config.yml
@@ -286,7 +286,7 @@ links:
   纯洁的微笑: http://ityouknow.com
   沉默王二: http://www.qingmiaokeji.cn
   子悠: https://zxsilence.cn
-
+  迷恋着你微笑的人: https://www.guoyuchuan.com
 
 # ---------------------------------------------------------------
 # Post Settings
