--- a/_config.yml
+++ b/_config.yml
@@ -469,7 +469,7 @@ google_analytics: U
 #yandex_site_verification:
 
 # CNZZ count
-#cnzz_siteid:
+cnzz_siteid: 1276814721
 
 # Application Insights
 # See https://azure.microsoft.com/en-us/services/application-insights/
