--- a/_config.yml
+++ b/_config.yml
@@ -287,6 +287,7 @@ links:
   沉默王二: http://www.qingmiaokeji.cn
   子悠: https://zxsilence.cn
   迷恋着你微笑的人: https://www.guoyuchuan.com
+  江南一点雨: http://www.javaboy.org
 
 # ---------------------------------------------------------------
 # Post Settings
