--- a/_config.yml
+++ b/_config.yml
@@ -287,6 +287,9 @@ links:
   沉默王二: http://www.qingmiaokeji.cn
   子悠: https://zxsilence.cn
   江南一点雨: http://www.javaboy.org
+  炸鸡可乐: http://pzblog.cn
+  郑璐璐: https://www.dynamic-zheng.com
+
 
 # ---------------------------------------------------------------
 # Post Settings
