--- a/_config.yml
+++ b/_config.yml
@@ -289,6 +289,7 @@ links:
   江南一点雨: http://www.javaboy.org
   炸鸡可乐: http://pzblog.cn
   郑璐璐: https://www.dynamic-zheng.com
+  徐小白: https://studyidea.cn
 
 
 # ---------------------------------------------------------------
