--- a/_config.yml
+++ b/_config.yml
@@ -122,7 +122,7 @@ menu:
   tags: /tags/
   archives: /archives/
   about: /about/
-  公号: http://favorites.ren/assets/images/java.jpg
+  pubwechat: http://favorites.ren/assets/images/java.jpg
   #sitemap: /sitemap.xml
   #commonweal: /404.html
 
