--- a/_config.yml
+++ b/_config.yml
@@ -206,6 +206,9 @@ font:
 # ---------------------------------------------------------------
 # Sidebar Settings
 # ---------------------------------------------------------------
+sidebar:
+  display: always
+
 
 
 # Social Links
