--- a/_config.yml
+++ b/_config.yml
@@ -293,6 +293,7 @@ links:
   炸鸡可乐: http://pzblog.cn
   郑璐璐: https://www.dynamic-zheng.com
   程序通事: https://studyidea.cn
+  测试是否可行:https://studyidea.cn
 
 
 # ---------------------------------------------------------------
